--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "youlikeapp",
-  "version": "1.3.5",
+  "version": "1.3.6",
   "author": {
     "name": "Plastiquewind"
   },
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "build": "rimraf dist && webpack --bail --progress --profile --NODE_ENV=production",
-    "server": "webpack-dev-server --https --history-api-fallback --inline --hot --progress --NODE_ENV=dev",
+    "server": "webpack-dev-server --history-api-fallback --inline --hot --progress --NODE_ENV=dev",
     "start": "npm run server"
   },
   "devDependencies": {
@@ -25,6 +25,7 @@
     "@types/gapi.auth2": "0.0.46",
     "@types/gapi.client.youtube": "^3.0.0",
     "@types/jquery": "^2.0.48",
+    "@types/lodash": "^4.14.100",
     "@types/query-string": "^5.0.1",
     "@types/toastr": "^2.1.35",
     "@types/validator": "^6.3.0",
@@ -63,6 +64,7 @@
     "angular-sanitize": "1.5.8",
     "angular-socialshare": "^2.3.11",
     "angular-ui-router": "1.0.0-beta.3",
+    "lodash": "^4.17.4",
     "moment": "^2.20.1",
     "query-string": "^5.0.1",
     "toastr": "^2.1.4",
