--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "youlikeapp",
-  "version": "1.3.6",
+  "version": "1.4.0",
   "author": {
     "name": "Plastiquewind"
   },
@@ -65,6 +65,7 @@
     "angular-socialshare": "^2.3.11",
     "angular-ui-router": "1.0.0-beta.3",
     "lodash": "^4.17.4",
+    "md-collection-pagination": "^1.0.3",
     "moment": "^2.20.1",
     "query-string": "^5.0.1",
     "toastr": "^2.1.4",
