--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "youlikeapp",
-  "version": "1.4.1",
+  "version": "1.4.2",
   "author": {
     "name": "Plastiquewind"
   },
@@ -10,12 +10,12 @@
     "url": "https://github.com/youlikeapp/youlikeapp.github.io"
   },
   "scripts": {
-    "build": "rimraf dist && webpack --bail --progress --profile --NODE_ENV=production",
-    "server": "webpack-dev-server --history-api-fallback --inline --hot --progress --NODE_ENV=dev",
-    "start": "npm run server"
+    "build": "cross-env NODE_ENV=production rimraf dist && webpack -p --bail --progress --profile --verbose",
+    "server": "cross-env NODE_ENV=dev webpack-dev-server --history-api-fallback --inline --hot --progress",
+    "start": "npm run server",
+    "tslint": "tslint --project tsconfig.json"
   },
   "devDependencies": {
-    "@types/angular": "1.5.16",
     "@types/angular-animate": "1.5.5",
     "@types/angular-block-ui": "^0.2.3",
     "@types/angular-cookies": "1.4.2",
@@ -30,23 +30,32 @@
     "@types/toastr": "^2.1.35",
     "@types/validator": "^6.3.0",
     "autoprefixer": "6.4.1",
-    "awesome-typescript-loader": "3.0.0-beta.13",
+    "awesome-typescript-loader": "3.1.3",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-angularjs-annotate": "^0.8.2",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015-webpack": "^6.4.3",
+    "babel-runtime": "^6.26.0",
     "connect-history-api-fallback": "1.3.0",
-    "css-loader": "0.25.0",
-    "extract-text-webpack-plugin": "1.0.1",
+    "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "2.1.2",
     "file-loader": "0.9.0",
+    "get-stream": "^3.0.0",
     "html-webpack-plugin": "2.22.0",
     "ng-annotate-loader": "0.1.1",
     "node-sass": "4.5.3",
-    "postcss-loader": "0.13.0",
+    "postcss-loader": "^2.1.3",
     "raw-loader": "0.5.1",
     "require-dir": "~0.3.0",
     "rimraf": "2.5.4",
-    "sass-loader": "4.0.2",
-    "style-loader": "0.13.1",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.20.3",
+    "tslint": "",
+    "tslint-eslint-rules": "^5.1.0",
     "typescript": "~2.6.2",
-    "webpack": "1.13.2",
-    "webpack-dev-server": "1.15.1",
+    "webpack": "2.6.1",
+    "webpack-dev-server": "2.4.5",
     "webpack-stream": "3.2.0"
   },
   "engines": {
@@ -56,6 +65,7 @@
     "angular": "1.5.8",
     "angular-animate": "1.5.8",
     "angular-aria": "1.5.8",
+    "angular-async-await": "^1.1.2",
     "angular-block-ui": "^0.2.2",
     "angular-cookies": "1.5.8",
     "angular-material": "1.1.1",
