--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@types/jquery": "^2.0.48",
     "@types/lodash": "^4.14.100",
     "@types/query-string": "^5.0.1",
+    "@types/rx": "^4.1.1",
+    "@types/rx-angular": "^0.0.30",
     "@types/toastr": "^2.1.35",
     "@types/validator": "^6.3.0",
     "autoprefixer": "6.4.1",
@@ -78,6 +80,7 @@
     "md-collection-pagination": "^1.0.3",
     "moment": "^2.20.1",
     "query-string": "^5.0.1",
+    "rx-angular": "^1.1.3",
     "toastr": "^2.1.4",
     "ts-md5": "^1.2.3",
     "validator": "^9.2.0"
