--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.6"
+    "vue-router": "^3.1.6",
+    "vue-social-sharing": "^2.4.7"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
