--- a/package.json
+++ b/package.json
@@ -1,44 +1,44 @@
 {
-  "name": "youlikeapp",
-  "version": "0.0.1",
-  "description": "A Quasar Framework app",
-  "productName": "Quasar App",
-  "cordovaId": "org.cordova.quasar.app",
-  "capacitorId": "",
-  "author": "ragtam <mag190033@gmail.com>",
-  "private": true,
-  "scripts": {
-    "serve": "quasar dev",
-    "lint": "eslint --ext .js,.vue src",
-    "test": "echo \"No test specified\" && exit 0"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.27",
-    "@fortawesome/free-brands-svg-icons": "^5.12.1",
-    "@fortawesome/free-solid-svg-icons": "^5.12.1",
-    "@fortawesome/vue-fontawesome": "^0.1.9",
-    "@quasar/extras": "^1.0.0",
-    "quasar": "^1.0.0",
-    "vue-i18n": "^8.0.0",
-    "vue-social-sharing": "^2.4.7"
-  },
-  "devDependencies": {
-    "@quasar/app": "^1.0.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^4.0.0",
-    "eslint-loader": "^3.0.3",
-    "eslint-plugin-vue": "^6.1.2"
-  },
-  "engines": {
-    "node": ">= 10.18.1",
-    "npm": ">= 6.13.4",
-    "yarn": ">= 1.21.1"
-  },
-  "browserslist": [
-    "last 1 version, not dead, ie >= 11"
-  ],
-  "resolutions": {
-    "@babel/parser": "7.7.5"
-  }
+    "name": "youlikeapp",
+    "version": "0.0.1",
+    "description": "YouLike App",
+    "productName": "YouLike",
+    "cordovaId": "org.cordova.quasar.app",
+    "capacitorId": "",
+    "author": "ragtam <mag190033@gmail.com>",
+    "private": true,
+    "scripts": {
+        "serve": "quasar dev",
+        "lint": "eslint --ext .js,.vue src",
+        "test": "echo \"No test specified\" && exit 0"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.2.27",
+        "@fortawesome/free-brands-svg-icons": "^5.12.1",
+        "@fortawesome/free-solid-svg-icons": "^5.12.1",
+        "@fortawesome/vue-fontawesome": "^0.1.9",
+        "@quasar/extras": "^1.0.0",
+        "quasar": "^1.0.0",
+        "vue-i18n": "^8.0.0",
+        "vue-social-sharing": "^2.4.7"
+    },
+    "devDependencies": {
+        "@quasar/app": "^1.0.0",
+        "babel-eslint": "^10.0.1",
+        "eslint": "^6.8.0",
+        "eslint-config-prettier": "^4.0.0",
+        "eslint-loader": "^3.0.3",
+        "eslint-plugin-vue": "^6.1.2"
+    },
+    "engines": {
+        "node": ">= 10.18.1",
+        "npm": ">= 6.13.4",
+        "yarn": ">= 1.21.1"
+    },
+    "browserslist": [
+        "last 1 version, not dead, ie >= 11"
+    ],
+    "resolutions": {
+        "@babel/parser": "7.7.5"
+    }
 }
