--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "scripts": {
         "serve": "quasar dev",
         "lint": "eslint --ext .js,.vue src",
-        "test": "echo \"No test specified\" && exit 0"
+        "test": "quasar test --unit jest"
     },
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^1.2.27",
@@ -24,6 +24,8 @@
     },
     "devDependencies": {
         "@quasar/app": "^1.0.0",
+        "@quasar/quasar-app-extension-testing": "^1.0.0",
+        "@quasar/quasar-app-extension-testing-unit-jest": "^1.0.0",
         "babel-eslint": "^10.0.1",
         "eslint": "^6.8.0",
         "eslint-config-prettier": "^4.0.0",
