--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "scripts": {
         "serve": "quasar dev",
         "lint": "eslint --ext .js,.vue src",
-        "test": "quasar test --unit jest"
+        "test": "quasar test --unit jest",
+        "build": "quasar build"
     },
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^1.2.27",
@@ -30,7 +31,8 @@
         "eslint": "^6.8.0",
         "eslint-config-prettier": "^4.0.0",
         "eslint-loader": "^3.0.3",
-        "eslint-plugin-vue": "^6.1.2"
+        "eslint-plugin-vue": "^6.1.2",
+        "vue-plugin-load-script": "^1.2.0"
     },
     "engines": {
         "node": ">= 10.18.1",
