--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
         "@fortawesome/free-solid-svg-icons": "^5.12.1",
         "@fortawesome/vue-fontawesome": "^0.1.9",
         "@quasar/extras": "^1.0.0",
+        "lodash": "^4.17.15",
         "quasar": "^1.0.0",
+        "query-string": "^6.11.1",
+        "validator": "^13.0.0",
         "vue-i18n": "^8.0.0",
         "vue-social-sharing": "^2.4.7"
     },
